<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.fcorcino.transportroute.ui.MainActivity">
    <item
        android:id="@+id/action_map"
        android:icon="@drawable/ic_map_white"
        android:title="@string/action_map"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_release_reservation"
        android:title="@string/release_reservation_text"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_preferences"
        android:title="@string/action_preferences"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_log_out"
        android:title="@string/action_log_out"
        app:showAsAction="never"/>
</menu>
