<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorWhite"
              android:orientation="vertical"
              android:paddingBottom="@dimen/spacing_standard"
              android:paddingLeft="@dimen/spacing_standard"
              android:paddingRight="@dimen/spacing_standard"
              android:paddingTop="@dimen/spacing_standard">

    <LinearLayout
        style="@style/RouteListItemRowContainer">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/route_name_label_text"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:id="@+id/route_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        style="@style/RouteListItemRowContainer">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/route_from_label_text"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:id="@+id/route_from_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        style="@style/RouteListItemRowContainer">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/route_to_label_text"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:id="@+id/route_to_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        style="@style/RouteListItemRowContainer">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/route_price_label_text"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:id="@+id/route_price_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>