<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.leaderapps.transport.ui.ReservationActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:paddingBottom="@dimen/spacing_standard"
        android:paddingLeft="@dimen/spacing_standard"
        android:paddingRight="@dimen/spacing_standard"
        android:paddingTop="@dimen/spacing_standard"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:id="@+id/reservation_title_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_between_views"
            android:gravity="center"
            android:text="@string/reservation_title_text"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_size_title"
            android:visibility="visible"/>

        <ImageView
            android:id="@+id/barcode_image_view"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@+id/reservation_title_text_view"/>

        <LinearLayout
            android:id="@+id/reservation_detail_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/barcode_image_view"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                style="@style/FieldHeaderText"
                android:text="@string/reservation_id_text"/>

            <TextView
                android:id="@+id/reservation_id_text_view"
                style="@style/FieldValueText"/>

            <TextView
                style="@style/FieldHeaderText"
                android:text="@string/quantity_of_person_text"/>

            <TextView
                android:id="@+id/quantity_of_person_text_view"
                style="@style/FieldValueText"/>

            <TextView
                style="@style/FieldHeaderText"
                android:text="@string/route_price_text"/>

            <TextView
                android:id="@+id/route_price_text_view"
                style="@style/FieldValueText"/>

            <TextView
                style="@style/FieldHeaderText"
                android:text="@string/reservation_amount_text"/>

            <TextView
                android:id="@+id/reservation_amount_text_view"
                style="@style/FieldValueText"/>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/loading_indicator_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/no_reservation_message_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/no_reservation_message_text"
            android:textSize="@dimen/text_size_subheading"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/create_reservation_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_add_white"
            app:fabSize="normal"/>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>
